// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadBar renders properly 1`] = `
<div
  className="loadbar-wrap"
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <div
    className="loadbar-spinner"
    style={Object {}}
  />
  <div
    className="loadbar-progress"
    style={
      Object {
        "width": "1%",
      }
    }
  />
</div>
`;

exports[`LoadBar renders without spinner 1`] = `
<div
  className="loadbar-wrap"
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <div
    className="loadbar-progress"
    style={
      Object {
        "width": "1%",
      }
    }
  />
</div>
`;

exports[`LoadBar with barStyle 1`] = `
<div
  className="loadbar-wrap"
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <div
    className="loadbar-spinner"
    style={Object {}}
  />
  <div
    className="loadbar-progress"
    style={
      Object {
        "fontSize": "4rem",
        "width": "1%",
      }
    }
  />
</div>
`;

exports[`LoadBar with spinnerStyle 1`] = `
<div
  className="loadbar-wrap"
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <div
    className="loadbar-spinner"
    style={
      Object {
        "backgroundColor": "tomato",
      }
    }
  />
  <div
    className="loadbar-progress"
    style={
      Object {
        "width": "1%",
      }
    }
  />
</div>
`;
